header has been created

--- a/project1/INDEX.html
+++ b/project1/INDEX.html
@@ -10,22 +10,36 @@
 <body>
     <div class="main-scr">
         <div class="header">
-            <p title="hi">welcome</p>
+            <div class="logo">
+                <img id="logo" src="letter-b.png" alt="">
+                <a href="INDEX.html">itDrag</a>
+            </div>
+            <div class="tab">
+               <table id="tb1">
+                <tr>
+                    <td>HOME |</td>
+                    <td>CONTACT |</td>
+                    <TD> FAQ</TD>
+                </tr>
+               </table>
+            </div>
+            <div class="avatar">
+                
+                <img id="avatar" src="gamer.png" alt="">
+
+            </div>
         </div>
         <div class="main">
-            <div class="left">
+            <div class="login">
 
             </div>
             <div class="screen">
-                <div class="box">
-                    <p>lorem ygyguyguygugujhbjhbhbjhbyg
-                        hbkhb</p>
-                </div>
+                    <img id="gif" src="4957136.jpg" alt="gif">
             </div>
 
         </div>
         <div class="footer">
-
+            
         </div>
     </div>
 </body>
