--- a/project1/INDEX.html
+++ b/project1/INDEX.html
@@ -17,9 +17,9 @@
             <div class="tab">
                <table id="tb1">
                 <tr>
-                    <td>HOME |</td>
-                    <td>CONTACT |</td>
-                    <TD> FAQ</TD>
+                    <td> <img class="tab1" src="home.png" alt=""> •°</td>
+                    <td> <a href="#footer"> <img class="tab1" src="contact-information.png" alt=""></a> •°</td>
+                    <TD><img class="tab1" src="faqs.png" alt=""> </TD>
                 </tr>
                </table>
             </div>
@@ -66,12 +66,20 @@
                     
             </div>
             <div class="screen">
-                <img id="right"  src="Design team.gif" alt="">
+                <img id="right"  src="3574.jpg" alt="">
             </div>
 
         </div>
-        <div class="footer">
-            
+        <div id="footer">
+            <img class="socialmedia" src="github.png" alt="github">
+            <img class="socialmedia" src="instagram.png" alt="instagram">
+            <img class="socialmedia" src="linkedin.png" alt="linkedin">
+            <img class="socialmedia" src="twitter.png" alt="twitter">
+            <p>Info•Support•Marketing</p>
+            <p>Terms of Use • Privacy Policy </p>
+            <p>©2023 ASHWIN KV</p>
+            <a href="https://storyset.com/mobile">Mobile illustrations by Storyset |</a>
+<a href="https://www.flaticon.com/free-icons/password" title="password icons">icons created by Uniconlabs - Flaticon</a>
         </div>
     </div>
 </body>
